test/error/DynamicArrayLeakSelect.fu
public static class Test
{
	public static bool Run()
	{
		int size = 5;
		int[10] FixedBuffer;
		int[] p = size <= 10 ? FixedBuffer : new int[size]; //ERROR: Dynamically allocated array must be assigned to a 'int[]#' reference
		return true;
	}
}
